--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "wiki"]
 	path = wiki
 	url = git@github.com:andypotanin/wp-resizely.wiki.git
-[submodule "vendor/resizely-jquery"]
-	path = vendor/resizely-jquery
-	url = git@github.com:UsabilityDynamics/resizely-jquery.git
+[submodule "vendor/resizely-client"]
+	path = vendor/resizely-client
+	url = git@github.com:UsabilityDynamics/resizely-client.git
