--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "wiki"]
 	path = wiki
-	url = git@github.com:andypotanin/wp-resizely.wiki.git
-[submodule "vendor/resizely-client"]
-	path = vendor/resizely-client
-	url = git@github.com:UsabilityDynamics/resizely-client.git
+	url = git@github.com:UsabilityDynamics/wp-resizely.wiki.git
