--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wiki"]
 	path = wiki
 	url = git@github.com:UsabilityDynamics/wp-resizely.wiki.git
+[submodule "externals/resizely-client"]
+	path = externals/resizely-client
+	url = https://github.com/UsabilityDynamics/resizely-client
