--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:UsabilityDynamics/wp-resizely.wiki.git
 [submodule "externals/resizely-client"]
 	path = externals/resizely-client
-	url = https://github.com/UsabilityDynamics/resizely-client
+	url = git@github.com/UsabilityDynamics/resizely-client.git
